RESOLVED FIXED270065
instanceof should not get RHS prototype when LHS is primitive
https://bugs.webkit.org/show_bug.cgi?id=270065
Summary instanceof should not get RHS prototype when LHS is primitive
Ross Kirsling
Reported 2024-02-25 22:11:49 PST
.
Attachments
Ross Kirsling
Comment 1 2024-02-25 22:29:59 PST
EWS
Comment 2 2024-02-26 06:43:32 PST
Committed 275318@main (2a1f6c179e54): <https://commits.webkit.org/275318@main> Reviewed commits have been landed. Closing PR #25086 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-02-26 06:44:14 PST
Alexey Shvayka
Comment 4 2024-07-13 17:31:41 PDT
*** Bug 216816 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.