Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp
@@ -3361,47 +3361,50 @@ RegisterID* ThrowableBinaryOpNode::emitBytecode(BytecodeGenerator& generator, Re
 RegisterID* InstanceOfNode::emitBytecode(BytecodeGenerator& generator, RegisterID* dst)
 {
     RefPtr<RegisterID> hasInstanceValue = generator.newTemporary();
-    RefPtr<RegisterID> isObject = generator.newTemporary();
-    RefPtr<RegisterID> isCustom = generator.newTemporary();
+    RefPtr<RegisterID> temp = generator.newTemporary();
     RefPtr<RegisterID> prototype = generator.newTemporary();
     RefPtr<RegisterID> value = generator.emitNodeForLeftHandSide(m_expr1, m_rightHasAssignments, m_expr2->isPure(generator));
     RefPtr<RegisterID> constructor = generator.emitNode(m_expr2);
     RefPtr<RegisterID> dstReg = generator.finalDestination(dst, value.get());
+    Ref<Label> ordinary = generator.newLabel();
     Ref<Label> custom = generator.newLabel();
     Ref<Label> done = generator.newLabel();
     Ref<Label> typeError = generator.newLabel();
 
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
-    generator.emitIsObject(isObject.get(), constructor.get());
-    generator.emitJumpIfFalse(isObject.get(), typeError.get());
+    generator.emitIsObject(temp.get(), constructor.get());
+    generator.emitJumpIfFalse(temp.get(), typeError.get());
 
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
     generator.emitGetById(hasInstanceValue.get(), constructor.get(), generator.vm().propertyNames->hasInstanceSymbol);
 
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
-    generator.emitOverridesHasInstance(isCustom.get(), constructor.get(), hasInstanceValue.get());
+    generator.emitOverridesHasInstance(temp.get(), constructor.get(), hasInstanceValue.get());
+    generator.emitJumpIfTrue(temp.get(), custom.get());
 
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
-    generator.emitJumpIfTrue(isCustom.get(), custom.get());
+    generator.emitIsObject(temp.get(), value.get());
+    generator.emitJumpIfTrue(temp.get(), ordinary.get());
 
+    generator.emitLoad(dstReg.get(), false);
+    generator.emitJump(done.get());
+
+    generator.emitLabel(ordinary.get());
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
     generator.emitGetById(prototype.get(), constructor.get(), generator.vm().propertyNames->prototype);
 
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
     generator.emitInstanceOf(dstReg.get(), value.get(), prototype.get());
-
     generator.emitJump(done.get());
 
     generator.emitLabel(typeError.get());
     generator.emitThrowTypeError("Right hand side of instanceof is not an object"_s);
 
     generator.emitLabel(custom.get());
-
     generator.emitExpressionInfo(divot(), divotStart(), divotEnd());
     generator.emitInstanceOfCustom(dstReg.get(), value.get(), constructor.get(), hasInstanceValue.get());
 
     generator.emitLabel(done.get());
-
     return dstReg.get();
 }
 
